# wikipedia_data_analysis

./: .env_example  .gitignore  README.md  wikipedia_data_ingest.py
data_ingest/: README.md  wikipedia_data_ingest.py
dbt/: .user.yml  README.md  dbt_project.yml  profiles.yml
dbt/macros/: create_cortex_udf.sql  create_schema.sql
dbt/models/: sources.yml
dbt/models/analytics/: wikipedia_pageviews.sql
dbt/models/marts/: dim_wikipedia_page.sql  dim_wikipedia_page.yml  fct_wikipedia_pageviews.sql  fct_wikipedia_pageviews.yml
dbt/models/staging/: stg_wikipedia_pageviews.sql  stg_wikipedia_pageviews.yml
orchestration/: README.md  pyproject.toml  setup.py
orchestration/dagster/: assets.py  definitions.py  project.py  schedules.py
orchestration/wikipedia_dagster/: __init__.py  assets.py  definitions.py
wikipedia_data_ingest/: wikipedia_data_ingest.py
wikipedia_dbt/: README.md  package-lock.yml  packages.yml
wikipedia_dbt/macros/: create_cortex_udf.sql
wikipedia_dbt/models/: dim_date.sql  dim_wikipedia_page.sql  fct_wikipedia_pageviews.sql  schema.yml  stg_wikipedia_pageviews.sql  wikipedia_pageviews.sql
wikipedia_dbt/models/analytics/: wikipedia_pageviews.sql
wikipedia_dbt/models/marts/: dim_hour.sql  dim_wikipedia_page.sql  fct_wikipedia_pageviews.yml
wikipedia_dbt/models/staging/: stg_wikipedia_pageviews.sql  stg_wikipedia_pageviews.yml
